fix: header overflow on mobile

--- a/themes/hello-friend-ng/assets/scss/_header.scss
+++ b/themes/hello-friend-ng/assets/scss/_header.scss
@@ -20,7 +20,7 @@
     margin: 0 15px;
     background: #ACACAC;
     @media #{$media-size-phone} {
-      margin: 0 5px;
+      display: none;
     }
   }
 
